# MySQLQueryGUI

./: CMakeLists.txt  README.md  mysqlquerygui.cpp
